# mcp-tui-test

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Dockerfile  EXAMPLES.md  LICENSE  README.md  Taskfile.yml  claude_desktop_config.example.json  docs-requirements.txt  example_tui_app.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  server.py  sitemap.xml
.github/workflows/: docs.yml
docs/: _config.yml  examples.md  index.md
docs/stylesheets/: custom.css
examples/: index.html
search/: search_index.js  search_index.json
